# ideaboxai-vertical-ml-service

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: main.yml
ml_services/anomaly_detection/: factory.py
ml_services/anomaly_detection/components/: model_trainer.py
ml_services/anomaly_detection/strategies/: base.py  stat_detectors.py
ml_services/scoring_ranking/: compute_rank.py  factory.py
ml_services/scoring_ranking/strategies/: base.py  topsis_ranker.py
notebooks/anomaly_detecton/: 1_eda.ipynb  2_model_prototyping.ipynb  2_table_wise_anomaly_detection.ipynb  3_results_analysis.ipynb
notebooks/farmer_performance_ranking/: farmer_ranking.ipynb
src/: main.py  setup_routes.py
src/anomaly_detection/: factory.py
src/anomaly_detection/components/: model_trainer.py
src/anomaly_detection/strategies/: base.py  ml_detectors.py  stat_detectors.py
src/recommendation/: main.py  routes.py
src/sandhya_aqua_erp/: db_conn.py
src/sandhya_aqua_erp/docs/: anomaly_detection_arch.excalidraw  farmer_ranking_arch.excalidraw  statistical_anomaly_detection.excalidraw
src/sandhya_aqua_erp/farmer_ranking/: pipeline_topsis.py  topsis_config.json
src/sandhya_aqua_erp/feature_engineering/: engineer_supply_chain_features.py
src/sandhya_aqua_erp/repositories/: cooking_repo.py  grading_repo.py  grn_repo.py  packing_repo.py  recommendation_repo.py  soaking_repo.py  supplier_repo.py  yield_repo.py
src/sandhya_aqua_erp/services/: cube_query_service.py  llm_recommender.py  (+2 more)
(+51 files in other folders)
