[project]
name = "ideaboxai-vertical-ml-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "dvc>=3.62.0",
    "pre-commit>=4.3.0",
]
